# power_v2

./: .gitignore  pyproject.toml
power_v2/: app.py  model.py  optim.py  optim_diffeq.py  track.py
